--- a/BPCApp/Db/Makefile
+++ b/BPCApp/Db/Makefile
@@ -7,9 +7,14 @@ include $(TOP)/configure/CONFIG
 # Create and install (or just install) into <top>/db
 # databases, templates, substitutions like this
 #DB += xxx.db
+DB += Status20.db
 DB += Status21.db
 DB += Status22.db
 DB += Status23.db
+DB += Status24.db
+DB += Status25.db
+DB += Status26.db
+DB += Status27.db
 DB += Tester.db
 DB += System.db
 
