--- a/bpcApp/src/Makefile
+++ b/bpcApp/src/Makefile
@@ -201,7 +201,7 @@ Common_DBDs += qsrv.dbd
 endif
 endif
 
-bpc_DBD += BPCbnl.dbd
+bpc_DBD += BPCSupport.dbd
 bpc_DBD += BPCsubs.dbd
 
 bpc_SRCS += StatSub.c
